fix(exercizer): #29430, increase contrast

--- a/src/main/resources/public/sass/global/_exercizer-specifics.scss
+++ b/src/main/resources/public/sass/global/_exercizer-specifics.scss
@@ -588,12 +588,12 @@ body.exercizer {
     height: inherit;
   }
   .input-response-correct{
-    color: $green !important;
+    color: darken($green, 10%) !important;
     border: 1px solid $green !important;
     background-color: rgba($green, 0.1);
   }
   .input-response-incorrect{
-    color: $red !important;
+    color: darken($red, 10%) !important;
     border: 1px solid $red !important;
     background-color: rgba($red, 0.1);
   }
